Fix HTML formatting and update developer credits

--- a/page5.html
+++ b/page5.html
@@ -58,7 +58,7 @@
                     <div class="row my-2">
                         <!--Dev1-->
                         <div class="col card p-3 bg-primary text-light mx-1 shadow-lg" style="width: 18rem;">
-                            <img src="images/Dev1.JPG" class="card-img-top" alt="...">
+                            <img src="images/Dev1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h1 class="card-title"><b>Stefan</b></h1>
                                 <footer class="blockquote-footer text-light">Main Developer</footer>
@@ -186,5 +186,6 @@
         </div>
 
     </body>
+
 
 </html>
