--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 <br><br>
 
                 <div class="row my-2">
-                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/9b942f9d-5526-43ea-b44a-f06254fc8571/O.B.+Montessori+Center+Program+-+Junior+High+School" width="100%" height="75%"><h3 class="text-center"><b>Primary Grade School</b> (Ages 6-8)</h3></div>
-                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/94a0554e-f0cc-4c44-a0b2-7cb83b863254/O.B.+Montessori+Center+Program+-+Senior+High+School" width="100%" height="75%"><h3 class="text-center"><b>Intermidiate Grade School</b> (Ages 9-12)</h3></div>
+                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/9b942f9d-5526-43ea-b44a-f06254fc8571/O.B.+Montessori+Center+Program+-+Junior+High+School" width="100%" height="75%"><h3 class="text-center"><b>Junior Highschool</b> (Ages 6-8)</h3></div>
+                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/94a0554e-f0cc-4c44-a0b2-7cb83b863254/O.B.+Montessori+Center+Program+-+Senior+High+School" width="100%" height="75%"><h3 class="text-center"><b>Senior Highschool</b> (Ages 9-12)</h3></div>
                 </div>
             </div>
         </div>
@@ -177,5 +177,6 @@
         </div>
 
     </body>
+
 
 </html>
