Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
 
             <div class="container">
                 <div class="row my-2">
-                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/856e1d32-be2f-41b1-b4a3-6dac248dae82/O.B.+Montessori+Center+Program+-+Casa" width="100%" height="75%"><h3 class="text-center"><b>Casa</b> (Ages 3-5)</h3></div>
-                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/f578b9d4-3fe9-490a-a9ca-969578cf06bb/O.B.+Montessori+Center+Program+-+Grade+School+Primary" width="100%" height="75%"><h3 class="text-center"><b>Primary Grade School</b> (Ages 6-8)</h3></div>
-                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/20f7dd81-6dfc-4b31-a83e-c0e2b3b1acc5/O.B.+Montessori+Center+Program+-+Grade+School+Intermediate" width="100%" height="75%"><h3 class="text-center"><b>Intermidiate Grade School</b> (Ages 9-12)</h3></div>
+                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/856e1d32-be2f-41b1-b4a3-6dac248dae82/O.B.+Montessori+Center+Program+-+Casa" width="100%"><h3 class="text-center"><b>Casa</b> (Ages 3-5)</h3></div>
+                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/f578b9d4-3fe9-490a-a9ca-969578cf06bb/O.B.+Montessori+Center+Program+-+Grade+School+Primary" width="100%"><h3 class="text-center"><b>Primary Grade School</b> (Ages 6-8)</h3></div>
+                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/20f7dd81-6dfc-4b31-a83e-c0e2b3b1acc5/O.B.+Montessori+Center+Program+-+Grade+School+Intermediate" width="100%"><h3 class="text-center"><b>Intermidiate Grade School</b> (Ages 9-12)</h3></div>
                 </div>
 
                 <br><br>
 
                 <div class="row my-2">
-                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/9b942f9d-5526-43ea-b44a-f06254fc8571/O.B.+Montessori+Center+Program+-+Junior+High+School" width="100%" height="75%"><h3 class="text-center"><b>Junior Highschool</b> (Ages 6-8)</h3></div>
-                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/94a0554e-f0cc-4c44-a0b2-7cb83b863254/O.B.+Montessori+Center+Program+-+Senior+High+School" width="100%" height="75%"><h3 class="text-center"><b>Senior Highschool</b> (Ages 9-12)</h3></div>
+                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/9b942f9d-5526-43ea-b44a-f06254fc8571/O.B.+Montessori+Center+Program+-+Junior+High+School" width="100%"><h3 class="text-center"><b>Junior Highschool</b> (Ages 6-8)</h3></div>
+                    <div class="col"><img class="" src="https://images.squarespace-cdn.com/content/v1/664c7ae50eea9c731b37e817/94a0554e-f0cc-4c44-a0b2-7cb83b863254/O.B.+Montessori+Center+Program+-+Senior+High+School" width="100%"><h3 class="text-center"><b>Senior Highschool</b> (Ages 9-12)</h3></div>
                 </div>
             </div>
         </div>
@@ -180,3 +180,4 @@
 
 
 </html>
+
